force-app/main/default/objects/col_RollupOperation__c/fields/col_ChildFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>col_ChildFieldAPI__c</fullName>
    <description>The field name on the Child Object whose value needs tobe rolled up.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ChildFieldAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>