force-app/main/default/objects/col_RollupOperation__c/fields/col_ChildObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>col_ChildObjectAPI__c</fullName>
    <description>The API Name of the Child object whose field will be rolled up.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ChildObjectAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>