force-app/main/default/objects/col_RollupOperation__c/fields/col_IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, the rollup operation works. Setting it ti false, will not delete the existing rollup figures.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>