force-app/main/default/objects/col_RollupOperation__c/fields/col_LookupFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>col_LookupFieldAPI__c</fullName>
    <description>The child object&apos;s lookup field name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LookupFieldAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>