force-app/main/default/objects/col_RollupOperation__c/fields/col_ParentObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>col_ParentObjectAPI__c</fullName>
    <description>Either Custom or Standard Object API name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentObjectAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>