force-app/main/default/objects/col_RollupOperation__c/fields/col_ParentRollupFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>col_ParentRollupFieldAPI__c</fullName>
    <description>The rollup field which contains the calculated value on the Parent object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentRollupFieldAPI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>