force-app/main/default/objects/col_RollupOperation__c/fields/col_QueryCondition__c.field-meta.xml
<CustomField>
    <fullName>col_QueryCondition__c</fullName>
    <description>Define the child records condition what to roll-up. It is in SOQL syntax, to be followed by the WHERE clause.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QueryCondition</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>