force-app/main/default/objects/col_RollupOperation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>col_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>