force-app/main/default/objects/col_RollupOperation__c/listViews/detailed.listView-meta.xml
<ListView>
    <fullName>detailed</fullName>
    <columns>NAME</columns>
    <columns>col_ChildObjectAPI__c</columns>
    <columns>col_ChildFieldAPI__c</columns>
    <columns>col_LookupFieldAPI__c</columns>
    <columns>col_ParentObjectAPI__c</columns>
    <columns>col_ParentRollupFieldAPI__c</columns>
    <columns>col_Operation__c</columns>
    <columns>col_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>detailed</label>
</ListView>